--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend-assignment",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
+
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,7 +17,13 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.11.1",
-    "nodemon": "^3.0.2"
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   }
 }
